try to fix height on safari 12

--- a/css/styles.css
+++ b/css/styles.css
@@ -453,7 +453,8 @@ body {
 }
 
 .how__img {
-  max-width: 38%;
+  width: 38%;
+  height: auto;
 }
 
 /* MEALS SECTION */
